--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-html,body{
-    margin:0;
-    height:100%;
-}
-img{
-  display:block;
-  width:100%; height:100%;
+html, body { margin:0; }
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
   object-fit: cover;
 }
 </style>
