--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <style>
-html, body { margin:0; }
+  html, body {
+   background-color: aquamarine;
+   margin: 0;
+  }
 
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
 </style>
 <img src=staci.jpg />
