--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     object-fit: cover;
   }
 </style>
-<script>console.log("%c hi", 'font-size: 10px; padding: 200px 400px 260px 100px; background: no-repeat url("/staci.jpg") 50% / 100%;')</script>
+<script>console.log("%c hi", 'font-size: 10px; padding: 200px 400px 260px 100px; background: no-repeat url("https://stacihou.com/staci.jpg") 50% / 100%;')</script>
 <img src=staci.jpg />
